--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,17 +1,16 @@
 .advantages {
-  margin-bottom: 70px;
   padding-top: 113px;
+  padding-bottom: 40px;
 
   @include outer-wrapper;
 }
 
 .advantages__wrapper {
-  @include inner-wrapper;
-  padding: 0 120px;
+  @include inner-wrapper-tighter;
 }
 
 .advantages__list {
-  margin: 0;
+  margin: 0 0 0 -30px;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
@@ -19,36 +18,17 @@
   list-style: none;
 }
 
-.advantages__container {
-  width: 50%;
-  box-sizing: border-box;
-  min-height: 330px;
-  padding: 0 15px 32px;
-  display: flex;
-
-  h3 {
-    margin-top: 13px;
-    margin-bottom: 0;
-
-    @include roboto-regular(24px, 34px);
-    color: $blue;
-  }
-
-  p {
-    @include ptmono(16px, 22px);
-    color: $dark-grey;
-  }
-}
-
-.advantages__image {
-  fill: $blue;
-}
-
 .advantages__item {
+  position: relative;
+  margin-left: 30px;
+  margin-bottom: 30px;
+  box-sizing: border-box;
+  min-height: 296px;
+  width: calc(50% - 30px);
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 40px 34px 47px 44px;
+  padding: 81px 34px 47px 44px;
 
   border-top: 1px solid $lighter-grey;
   border-right: 1px solid $lighter-grey;
@@ -56,6 +36,28 @@
   border-left: 3px solid $blue;
   background-color: $white;
   transition: 0.4s;
+
+  svg {
+    position: absolute;
+    top: 40px;
+    left: 45px;
+
+    fill: $blue;
+  }
+
+  h3 {
+    margin-bottom: 18px;
+
+    @include roboto-regular(24px, 34px);
+    color: $blue;
+  }
+
+  p {
+    margin: 0;
+
+    @include ptmono(16px, 22px);
+    color: $dark-grey;
+  }
 }
 
 .advantages__item:hover {
@@ -63,20 +65,20 @@
   border-color: $blue;
   transition: 0.4s;
 
+  svg {
+    fill: $white;
+  }
+
   h3,
   p {
     color: $white;
-  }
-
-  svg {
-    fill: $white;
   }
 }
 
 @media (max-width: $desktop-width - 1) {
   .advantages {
-    margin-bottom: 20px;
     padding-top: 53px;
+    padding-bottom: 0;
   }
 
   .advantages__wrapper {
@@ -84,27 +86,28 @@
   }
 
   .advantages__list {
-    margin: 0 -15px;
+    margin-left: -25px;
+    margin-right: -5px;
   }
 
-  .advantages__container {
-    min-height: 265px;
+  .advantages__item {
+    margin-left: 25px;
+    margin-right: 5px;
+    min-height: 232px;
+    padding: 43px 19px 20px 25px;
+
+    svg {
+      top: 25px;
+      left: 25px;
+    }
 
     h3 {
-      margin-top: 9px;
+      margin-bottom: 0;
     }
 
     p {
       margin-top: 7px;
     }
-  }
-
-  .advantages__item {
-    padding: 23px 19px 3px 25px;
-  }
-
-  .advantages__image-container {
-    height: 35px;
   }
 
   .advantages__image {
@@ -132,36 +135,27 @@
 
 @media (max-width: $tablet-width - 1) {
   .advantages {
-    margin-bottom: 37px;
     padding-top: 37px;
-  }
-
-  .advantages__marginfix {
-    margin-right: -2px;
+    padding-bottom: 30px;
   }
 
   .advantages__list {
-    margin: 0 -2px;
+    margin: 0;
     flex-direction: column;
   }
 
-  .advantages__container {
+  .advantages__item {
+    margin: 0 0 20px;
+    padding: 59px 18px 26px 23px;
     width: 100%;
-    margin-bottom: 20px;
-    padding: 0;
     min-height: 233px;
+
+    border-left: 2px solid $blue;
 
     h3 {
       margin-top: 13px;
 
       @include roboto-regular(20px, 140.62%);
     }
-  }
-
-  .advantages__item {
-    padding-right: 18px;
-    padding-bottom: 10px;
-    padding-left: 23px;
-    border-left: 2px solid $blue;
   }
 }
