--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -87,6 +87,8 @@
   }
 
   a {
+    display: block;
+
     font-size: 0;
   }
 
@@ -225,7 +227,7 @@
     flex-direction: column;
     align-items: center;
     padding-top: 45px;
-    padding-bottom: 51px;
+    padding-bottom: 55px;
 
     span {
       margin: 0 0 30px 0;
