--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,5 +1,6 @@
 .page-header {
   @include outer-wrapper;
+  margin-bottom: -118px;
   padding: 33px 0;
   position: relative;
   z-index: 2;
@@ -24,6 +25,7 @@
 
 @media (max-width: $desktop-width - 1) {
   .page-header {
+    margin-bottom: -92px;
     padding-top: 20px;
     padding-bottom: 20px;
   }
@@ -36,6 +38,7 @@
 
 @media (max-width: $tablet-width - 1) {
   .page-header {
+    margin-bottom: -74px;
     padding-top: 16px;
   }
 
