--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,34 +1,24 @@
 .advantages {
+  @include outer-wrapper;
   padding-top: 113px;
   padding-bottom: 40px;
-
-  @include outer-wrapper;
 }
 
 .advantages__wrapper {
   @include inner-wrapper-tighter;
-}
-
-.advantages__list {
-  margin: 0 0 0 -30px;
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-
-  list-style: none;
+  margin-bottom: -30px;
 }
 
 .advantages__item {
   position: relative;
-  margin-left: 30px;
+  margin-right: 30px;
   margin-bottom: 30px;
   box-sizing: border-box;
   min-height: 296px;
-  width: calc(50% - 30px);
+  width: calc(50% - 15px);
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
-  padding: 81px 34px 47px 44px;
+  padding: 40px 34px 47px 44px;
 
   border-top: 1px solid $lighter-grey;
   border-right: 1px solid $lighter-grey;
@@ -37,16 +27,18 @@
   background-color: $white;
   transition: 0.4s;
 
+  &:nth-child(odd) {
+    margin-right: 0;
+  }
+
   svg {
-    position: absolute;
-    top: 40px;
-    left: 45px;
+    margin-bottom: 20px;
 
     fill: $blue;
   }
 
   h3 {
-    margin-bottom: 18px;
+    margin: 0 0 16px;
 
     @include roboto-regular(24px, 34px);
     color: $blue;
@@ -82,54 +74,25 @@
   }
 
   .advantages__wrapper {
-    padding: 0;
-  }
-
-  .advantages__list {
-    margin-left: -25px;
-    margin-right: -5px;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .advantages__item {
-    margin-left: 25px;
-    margin-right: 5px;
     min-height: 232px;
-    padding: 43px 19px 20px 25px;
+    padding: 25px 19px 20px 25px;
 
     svg {
-      top: 25px;
-      left: 25px;
+      margin-bottom: 10px;
     }
 
     h3 {
-      margin-bottom: 0;
-    }
-
-    p {
-      margin-top: 7px;
+      margin-bottom: 10px;
     }
   }
 
   .advantages__image {
-    &--stopwatch {
-      width: 29.38px;
-      height: 35.46px;
-    }
-
-    &--hired {
-      width: 31.72px;
-      height: 32.18px;
-    }
-
-    &--detective {
-      width: 30.31px;
-      height: 26.1px;
-    }
-
-    &--tag {
-      width: 32.18px;
-      height: 32.18px;
-    }
+    height: 34.46px;
   }
 }
 
@@ -139,23 +102,24 @@
     padding-bottom: 30px;
   }
 
-  .advantages__list {
-    margin: 0;
+  .advantages__wrapper {
     flex-direction: column;
   }
 
   .advantages__item {
     margin: 0 0 20px;
-    padding: 59px 18px 26px 23px;
+    padding: 23px 18px 26px 23px;
     width: 100%;
     min-height: 233px;
 
     border-left: 2px solid $blue;
 
     h3 {
-      margin-top: 13px;
-
       @include roboto-regular(20px, 140.62%);
+    }
+
+    svg {
+      margin-bottom: 13px;
     }
   }
 }
