--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,6 +1,6 @@
 .about {
   @include outer-wrapper;
-  padding-top: 40px;
+  padding-top: 80px;
   padding-bottom: 100px;
   display: flex;
   align-items: flex-start;
@@ -11,36 +11,29 @@
 }
 
 .about__img-container {
-  flex-shrink: 0;
+  padding-top: 12px;
   width: 179px;
-  height: 317px;
-
-  background: url("../img/2005-desktop.png") no-repeat -30px 7px;
-  background-size: 220px 317px;
-
-  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/2005-desktop-2x.png");
-  }
 }
 
 .about__container {
   width: calc(100% - 179px);
-}
 
-.about__title {
-  margin-top: 0;
-  margin-bottom: 20px;
+  h3 {
+    margin-top: 0;
+    margin-bottom: 20px;
 
-  @include roboto-regular(36px, 51px);
-  color: $dark-grey;
-}
+    @include roboto-regular(36px, 51px);
+    color: $dark-grey;
+  }
 
-.about__text {
-  padding-right: 30px;
-  margin-bottom: 21px;
+  p {
+    padding-right: 30px;
+    margin-top: 0;
+    margin-bottom: 21px;
 
-  @include ptmono(16px, 22px);
-  color: $dark-grey;
+    @include ptmono(16px, 22px);
+    color: $dark-grey;
+  }
 }
 
 .about__excerpt {
@@ -53,7 +46,7 @@
 
 @media (max-width: $desktop-width - 1) {
   .about {
-    padding-top: 28px;
+    padding-top: 54px;
     padding-bottom: 80px;
   }
 
@@ -63,30 +56,30 @@
   }
 
   .about__img-container {
-    width: 189px;
-    height: 354px;
-    background: url("../img/2005-tablet.png") no-repeat -33px -2px;
+    width: 187px;
+    padding-top: 6px;
 
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/2005-tablet-2x.png");
+    img {
+      width: 130.26px;
+      height: 346.81px;
     }
   }
 
   .about__container {
     width: calc(100% - 189px);
-  }
 
-  .about__title {
-    margin-top: 0;
-    margin-bottom: 28px;
+    h3 {
+      margin-top: 0;
+      margin-bottom: 25px;
 
-    @include roboto-regular(32px, 140.62%);
-  }
+      @include roboto-regular(32px, 140.62%);
+    }
 
-  .about__text {
-    padding-right: 0;
+    p {
+      padding-right: 0;
 
-    @include ptmono(16px, 22px);
+      @include ptmono(16px, 22px);
+    }
   }
 
   .about__excerpt {
@@ -105,7 +98,7 @@
 @media (max-width: $tablet-width - 1) {
   .about {
     margin: 0;
-    padding-top: 7px;
+    padding-top: 37px;
     padding-bottom: 65px;
   }
 
@@ -116,17 +109,17 @@
   .about__container {
     width: 100%;
     margin: 0;
-  }
 
-  .about__title {
-    margin-bottom: 20px;
+    h3 {
+      margin-bottom: 20px;
 
-    @include roboto-regular(28px, 140.62%);
-  }
+      @include roboto-regular(28px, 140.62%);
+    }
 
-  .about__text {
-    padding-right: 0;
-    margin-bottom: 38px;
+    p {
+      padding-right: 0;
+      margin-bottom: 38px;
+    }
   }
 
   .about__link {
