--- a/source/sass/blocks/callback.scss
+++ b/source/sass/blocks/callback.scss
@@ -1,14 +1,20 @@
 .callback {
-  @include outer-wrapper;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: $blue;
 }
 
 .callback__wrapper {
-  @include inner-wrapper(1540px);
+  width: 1540px;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
   padding-top: 62px;
   padding-bottom: 72px;
   position: relative;
   z-index: 0;
+
   background: url("../../img/airplane-background.svg") top -58px left -15px no-repeat, url("../../img/airplane.png") top 163px left 161px no-repeat;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
@@ -26,7 +32,7 @@
   display: flex;
   flex-wrap: wrap;
   box-sizing: border-box;
-  max-width: 585px;
+  width: 585px;
   padding-left: 15px;
 
   h2 {
@@ -39,6 +45,7 @@
 
   p {
     margin: 0 0 50px;
+    width: 100%;
 
     @include ptmono(16px, 22px);
     color: $white;
@@ -133,8 +140,8 @@
 
 @media (max-width: $desktop-width - 1) {
   .callback__wrapper {
-    padding-top: 52px;
-    padding-bottom: 62px;
+    width: 100%;
+    padding: 52px 90px 62px;
 
     background: none;
   }
@@ -166,8 +173,7 @@
 
 @media (max-width: $tablet-width - 1) {
   .callback__wrapper {
-    padding-top: 9px;
-    padding-bottom: 11px;
+    padding: 9px 15px 11px;
   }
 
   .callback__form {
