--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,6 +1,4 @@
 .page-footer {
-  padding-top: 65px;
-
   color: $dark-blue;
 
   &--nojs {
@@ -38,13 +36,18 @@
 }
 
 .page-footer__top {
-  @include outer-wrapper;
-  padding-bottom: 58px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 65px 0 58px;
   border-bottom: 1px solid rgba($grey, 0.2);
 }
 
 .page-footer__columns {
-  @include inner-wrapper(1440px);
+  width: 1440px;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -59,10 +62,6 @@
   display: flex;
   flex-direction: column;
   padding-right: 5vw;
-
-  span {
-    display: none;
-  }
 }
 
 .page-footer__social {
@@ -116,9 +115,13 @@
   margin: 0;
   padding: 0;
 
-  li {
+  li,
+  p {
+    margin: 0;
+
     @include ptmono(15px, 25px);
     color: rgba($dark-blue, 0.5);
+    font-style: normal;
 
     a {
       color: inherit;
@@ -154,11 +157,9 @@
   .page-footer__intro {
     margin-right: 0;
     width: 100%;
-    padding: 20px 0 25px;
+    padding: 20px 25px 25px;
     flex-direction: row;
     align-items: center;
-
-    @include outer-wrapper;
 
     border-bottom: 1px solid rgba($grey, 0.2);
 
@@ -231,9 +232,7 @@
     border-bottom: 1px solid rgba($grey, 0.2);
     position: relative;
 
-    @include outer-wrapper;
-    padding-top: 30px;
-    padding-bottom: 23px;
+    padding: 30px 25px 23px;
 
     h3 {
       margin-bottom: 2px;
