--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -5,21 +5,22 @@
 }
 
 .about__wrapper {
-  width: 1170px;
+  width: 1440px;
   box-sizing: border-box;
-  padding-top: 80px;
-  padding-bottom: 100px;
+  padding: 76px 135px 104px;
   display: flex;
   flex-wrap: wrap;
-}
 
-.about__img-container {
-  padding-top: 12px;
-  width: 179px;
+  background: url("../../img/2005.png") 136px 87px no-repeat;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background: url("../../img/2005-2x.png") 136px 87px no-repeat;
+    background-size: 115px auto;
+  }
 }
 
 .about__container {
-  width: calc(100% - 179px);
+  margin-left: 180px;
 
   h3 {
     margin-top: 0;
@@ -50,21 +51,19 @@
 @media (max-width: $desktop-width - 1) {
   .about__wrapper {
     display: flex;
-    padding: 54px 25px 80px;
-  }
+    padding: 54px 25px 85px;
 
-  .about__img-container {
-    width: 187px;
-    padding-top: 6px;
+    background: url("../../img/2005.png") 28px 60px no-repeat;
+    background-size: 131px auto;
 
-    img {
-      width: 130.26px;
-      height: 346.81px;
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background: url("../../img/2005-2x.png") 28px 60px no-repeat;
+      background-size: 131px auto;
     }
   }
 
   .about__container {
-    width: calc(100% - 189px);
+    margin-left: 188px;
 
     h3 {
       margin-top: 0;
@@ -96,10 +95,8 @@
 @media (max-width: $tablet-width - 1) {
   .about__wrapper {
     padding: 37px 15px 65px;
-  }
 
-  .about__img-container {
-    display: none;
+    background: none;
   }
 
   .about__container {
