--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -6,10 +6,9 @@
 
 .advantages__wrapper {
   margin-bottom: -30px;
-  width: 1170px;
+  width: 1440px;
   box-sizing: border-box;
-  padding-top: 113px;
-  padding-bottom: 30px;
+  padding: 113px 135px 30px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -19,7 +18,7 @@
   margin-right: 30px;
   margin-bottom: 30px;
   box-sizing: border-box;
-  min-height: 296px;
+  min-height: 299px;
   width: calc(50% - 15px);
   display: flex;
   flex-direction: column;
