--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -35,7 +35,7 @@
   @include roboto-regular(20px, 30px);
   color: $white;
   text-decoration: none;
-  background-color: $dark-blue;
+  background-color: saturate($dark-blue, 20%);
   background-position: top center;
   background-repeat: no-repeat;
   transition: 0.4s;
